# MCSwitch

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2.6pre1  PKGBUILD  README.markdown  cleanup  cleanup.rb  config.hpp.in  uninstall.sh
src/: AboutWidget.cpp  AboutWidget.hpp  AddNewEnvDialog.cpp  AddNewEnvDialog.hpp  CMakeLists.txt  CentralWidget.cpp  CentralWidget.hpp  ChangeEnvDataDialog.cpp  ChangeEnvDataDialog.hpp  ChangeEnvDataDialog.ui  DeleteEnvDialog.cpp  DeleteEnvDialog.hpp  Environment.cpp  Environment.hpp  Environments.cpp  Environments.hpp  MCEnv.cpp  MCEnv.hpp  MainWindow.cpp  MainWindow.hpp  fileutils.hpp  initialize.hpp  main.cpp  main.qrc  version.hpp  xml.cpp  xml.hpp
src/resources/icons/: mac_icon.icns
src/resources/tests/: LICENSE.txt
src/resources/text/: LICENSE.txt
src/resources/xmls/: tmp1.xml  tmp2.xml
