INCLUDE_DIRECTORIES(${QT_QTXML_INCLUDE_DIR})
FIND_PACKAGE(Qt4 4.8.1 REQUIRED)

SET(BINARY_NAME "MCSwitch")

SET(MSRC
    ${SRC_DIR}/main.cpp
    ${SRC_DIR}/MainWindow.cpp
	${SRC_DIR}/CentralWidget.cpp
	${SRC_DIR}/Environment.cpp
	)

SET(MHED
    ${SRC_DIR}/MainWindow.hpp
	${SRC_DIR}/CentralWidget.hpp
	${SRC_DIR}/Environment.hpp
    )

QT4_WRAP_CPP(HMOD ${MHED})
QT4_ADD_RESOURCES(QRC ${SRC_DIR}/main.qrc)
ADD_DEFINITIONS(${QT_DEFINITIONS})
INCLUDE(${QT_USE_FILE})




SET(SRCS ${MSRC} ${HMOD} ${QRC})
IF(APPLE) 

	SET(SRCS ${SRCS} ${PROJECT_SOURCE_DIR}/src/resources/icons/mac_icon.icns)
	SET(MACOSX_BUNDLE_ICON_FILE ${PROJECT_SOURCE_DIR}/src/resources/icons/mac_icon.icns)
	SET_SOURCE_FILES_PROPERTIES(mac_icon.icns PROPERTIES 
	    MACOSX_PACKAGE_LOCATION Resources)
	ADD_EXECUTABLE(${BINARY_NAME} MACOSX_BUNDLE ${SRCS})


ELSEIF(WIN32)


	#SET(SRCS ${SRCS} ${PROJECT_SOURCE_DIR}/src/resource/win/WinPICON.rc)
	ADD_EXECUTABLE(${BINARY_NAME} WIN32 ${SRCS})


ELSEIF(UNIX AND NOT APPLE)

	ADD_EXECUTABLE(${BINARY_NAME} ${SRCS})

ENDIF()

TARGET_LINK_LIBRARIES(${BINARY_NAME} ${QT_LIBRARIES} ${QT_QTXML_LIBRARY})
